# Furrany-Studio-Editor

./: .gitignore  CMakeLists.txt  README.md
OpenGLBranch/FurranyEditorOpenGL/: FurranyEditorOpenGL.sln
OpenGLBranch/FurranyEditorOpenGL/FurranyEditorOpenGL/: FurranyEditorOpenGL.cpp  FurranyEditorOpenGL.vcxproj  FurranyEditorOpenGL.vcxproj.filters
OpenGLBranch/FurranyEditorOpenGL/FurranyEditorOpenGL/Shaders/: fragment_shader.glsl  vertex_shader.glsl
OpenGLBranch/FurranyEditorOpenGL/FurranyEditorOpenGL/x64/Debug/: FurranyEditorOpenGL.exe.recipe  FurranyEditorOpenGL.ilk  vc143.idb
OpenGLBranch/FurranyEditorOpenGL/FurranyEditorOpenGL/x64/Debug/FurranyE.C09DA179.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FurranyEditorOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libs/macOS/x64/: libSDL2.dylib
libs/windows/x64/: SDL2.lib  SDL2main.lib
libs/windows/x86/: SDL2.lib  SDL2main.lib
src/: main.cpp
toolchains/: macos_arm64.cmake  macos_x64.cmake  windows_x64.cmake  windows_x86.cmake
